[package]
name = "chorus"
version = "0.1.0"
authors = ["Benjamin Richeson <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus_lexer = { path = "../chorus_lexer" }
chorus_ast = { path = "../chorus_ast" }
clap = "2.33.3"
colored = "2.0.0"
lua = "0.0.10"
regex = "1.4.3"
